Added react-router support

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dionysus-react-app",
   "version": "0.1.0",
   "private": true,
+  "license": "GPL-3.0",
   "dependencies": {
     "downshift": "^1.28.5",
     "material-ui": "^1.0.0-beta.35",
@@ -18,6 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write src/*"
+  },
+  "devDependencies": {
+    "prettier": "^1.11.1"
   }
 }
