--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-truncate": "^2.3.0",
-    "truncate": "^2.0.1"
+    "redux": "^3.7.2",
+    "truncate": "^2.0.1",
+    "video-react": "^0.9.4",
+    "video.js": "^6.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
