--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-ui-icons": "^1.0.0-beta.35",
     "moviedb": "^0.2.10",
     "react": "^16.2.0",
+    "react-device-detect": "^0.1.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
