--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "license": "GPL-3.0",
-  "homepage": "https://adcar.github.io/dionysus",
+  "homepage": "/",
   "dependencies": {
     "downshift": "^1.28.5",
     "material-ui": "^1.0.0-beta.35",
