--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
-  "name": "dionysus-react-app",
-  "version": "0.1.0",
-  "private": true,
-  "license": "GPL-3.0",
-  "homepage": "/",
-  "dependencies": {
-    "downshift": "^1.28.5",
-    "material-ui": "^1.0.0-beta.35",
-    "material-ui-icons": "^1.0.0-beta.35",
-    "moviedb": "^0.2.10",
-    "react": "^16.2.0",
-    "react-device-detect": "^0.1.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
-    "react-truncate": "^2.3.0",
-    "redux": "^3.7.2",
-    "truncate": "^2.0.1",
-    "video-react": "^0.9.4",
-    "video.js": "^6.6.3"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "prettier": "prettier --write src/*"
-  },
-  "devDependencies": {
-    "prettier": "^1.11.1"
-  }
+	"name": "dionysus-react-app",
+	"version": "0.1.0",
+	"private": true,
+	"license": "GPL-3.0",
+	"homepage": "/",
+	"dependencies": {
+		"downshift": "^1.28.5",
+		"material-ui": "^1.0.0-beta.35",
+		"material-ui-icons": "^1.0.0-beta.35",
+		"moviedb": "^0.2.10",
+		"node-sass-chokidar": "^1.1.0",
+		"npm-run-all": "^4.1.2",
+		"react": "^16.2.0",
+		"react-device-detect": "^0.1.0",
+		"react-dom": "^16.2.0",
+		"react-router-dom": "^4.2.2",
+		"react-scripts": "1.1.1",
+		"react-truncate": "^2.3.0",
+		"react-videojs": "^0.0.3",
+		"redux": "^3.7.2",
+		"truncate": "^2.0.1",
+		"video.js": "^6.7.3"
+	},
+	"scripts": {
+		"build-css": "node-sass-chokidar src/ -o src/",
+		"watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+		"start-js": "react-scripts start",
+		"start": "npm-run-all -p watch-css start-js",
+		"build-js": "react-scripts build",
+		"build": "npm-run-all build-css build-js",
+		"test": "react-scripts test --env=jsdom",
+		"eject": "react-scripts eject",
+		"prettier": "prettier --write src/*"
+	},
+	"devDependencies": {
+		"prettier": "^1.11.1"
+	}
 }
