--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
 		"react-truncate": "^2.3.0",
 		"react-videojs": "^0.0.3",
 		"redux": "^3.7.2",
-		"truncate": "^2.0.1",
-		"video.js": "^6.7.3"
+		"truncate": "^2.0.1"
 	},
 	"scripts": {
 		"build-css": "node-sass-chokidar src/ -o src/",
