--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "dionysus-react-app",
+	"name": "dionysus",
 	"version": "0.1.0",
 	"private": true,
 	"license": "GPL-3.0",
@@ -23,7 +23,8 @@
 	},
 	"scripts": {
 		"build-css": "node-sass-chokidar src/ -o src/",
-		"watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+		"watch-css":
+			"npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
 		"start-js": "react-scripts start",
 		"start": "npm-run-all -p watch-css start-js",
 		"build-js": "react-scripts build",
@@ -34,5 +35,7 @@
 	},
 	"devDependencies": {
 		"prettier": "^1.11.1"
-	}
+	},
+	"keywords": [],
+	"description": ""
 }
