--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"material-ui": "^1.0.0-beta.35",
 		"material-ui-icons": "^1.0.0-beta.35",
 		"moviedb": "^0.2.10",
-		"node-sass-chokidar": "^1.1.0",
 		"npm-run-all": "^4.1.2",
 		"react": "^16.2.0",
 		"react-device-detect": "^0.1.0",
@@ -22,13 +21,8 @@
 		"truncate": "^2.0.1"
 	},
 	"scripts": {
-		"build-css": "node-sass-chokidar src/ -o src/",
-		"watch-css":
-			"npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-		"start-js": "react-scripts start",
-		"start": "npm-run-all -p watch-css start-js",
-		"build-js": "react-scripts build",
-		"build": "npm-run-all build-css build-js",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
 		"prettier": "prettier --write src/*"
